# quant-hackathon

./: .gitignore  README.md  analysis.py  bet.py  data.py  instructions.md  justfile  main.py  predict.py  pyproject.toml  ruff.toml
quant/: __init__.py  __main__.py  bet.py  data.py  data_helper.py  model.py  predict.py  types.py
quant/models/: Elo.py
upload/: analyze.py  copiedopenskill.py  environment.py  evaluate.py  model.py  model2.py  submit.py
upload/predictionModels/: copiedopenskill.py  elo.py  pagerank.py
upload/upload_versions/: evaluate.py  model.py
