[tool.poetry]
name = "quant"
description = "AI powered betting algorithm"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

numpy = "^1.26"
scikit-learn = "^1.5.1"
scipy = "^1.12"
xgboost = "^2.1.1"
pandas = "^2.2.2"
matplotlib = "^3.9"
numexpr = "^2.8.7"
bottleneck = "^1.3.7"

[tool.poetry.group.dev.dependencies]
black = "^24.10"
ruff = "^0.7"
pyright = "^1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
